tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MagnaliumCrossbo-AAAAAAAAAAAAAAAAAAAEgg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1154,
  "prerequisites": [
    1155,
    1150
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Magnalium bolts are much better than your old wooden bolts.\n\nYou can use nether quartz on the bolts to make them even better. This requires a free modifier slot.\n\nExperiment with NEI to find other good bolt materials.\n\nTo make these bolts, you must use a Fluid Solidifier instead of the Tinker's casting table. It's important that you get the molten iron out of the smeltery and into the Fluid Solidifier, the GT molten iron won't work.\n\nThe bolts should be in your inventory or in a bauble slot if you want to pick up the ones you fired.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§5§lMagnalium Crossbow Bolts",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1155,
    1150
  ],
  "rewards": [],
  "tasks": []
}
