tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__MallardRustSmell-AAAAAAAAAAAAAAAAAAAFiA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1416,
  "prerequisites": [
    213,
    12880365575383562570
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Or is it Alloy Blast Smelter? Well, that makes more sense. This multiblock creates the higher tier alloys needed for more advanced multiblocks and your soldering needs. It directly smelts ingredients into liquids. You can even melt down metals like Tungsten faster too! Until you get better coils for your EBF at least.\n\n[note]Most of the multiblocks you can now make are optional, but quite powerful upgrades to your current singleblock setups. Not only do they provide more speed, they also have a bit of advanced functionality: you can also electrolyze materials without using cells or use a single multiblock for many different extruder shapes. They also act as cleanrooms where needed.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lMallard Rust Smelly",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213,
    12880365575383562570
  ],
  "rewards": [],
  "tasks": []
}
